fixed the overflow of the article

--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,7 @@ html, body{
     width: 800px;
     margin: 0 auto;
     padding: 15px;
+    overflow: hidden;
 }
 
 #container a{
